Run workers in "virtual" threads